--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
-    "node-fetch": "^1.7.1"
+    "node-fetch": "^1.7.1",
+    "should": "^11.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
